fixing background image not showing.

--- a/css/style.css
+++ b/css/style.css
@@ -103,7 +103,7 @@ main::before{
   bottom: 0;
   left: 0;
   right: 0;
-  background-image: url(/assests/images/gian-paul-guinto-ufYFr90FgXQ-unsplash.jpg);
+  background-image: url(../assests/images/gian-paul-guinto-ufYFr90FgXQ-unsplash.jpg);
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
